debug: added in capability to parse a missing G1GC log line