@@ -88,6 +88,7 @@ public class UnifiedG1GCParser extends UnifiedGCLogParser implements UnifiedG1GC
         parseRules.put(REGION_SUMMARY, this::regionSummary);
         parseRules.put(UNIFIED_META_DATA, this::unifiedMetaData);
         parseRules.put(YOUNG_DETAILS, this::youngDetails);
+        parseRules.put(YOUNG_FAILURE, this::youngError);
         parseRules.put(META_SPACE_BREAKOUT, this::metaNonClassClassSpace);
         parseRules.put(HEAP_REGION_SIZE, this::heapRegionSize);
         parseRules.put(HEAP_SIZE, this::heapSize);
@@ -533,6 +534,31 @@ public class UnifiedG1GCParser extends UnifiedGCLogParser implements UnifiedG1GC
                 LOGGER.warning(malformedEvent.getMessage());
             }
     	}
+    }
+
+    public void youngError(GCLogTrace trace, String line) {
+        //todo: record error condition.
+        forwardReference.setHeapOccupancyBeforeCollection(trace.toKBytes(5));
+        forwardReference.setHeapOccupancyAfterCollection(trace.toKBytes(7));
+        forwardReference.setHeapSizeAfterCollection(trace.toKBytes(9));
+        forwardReference.setDuration(trace.getDurationInSeconds());
+
+        // Handling -Xlog:gc logs (#372)
+        // If the GC log was generated using -Xlog:gc instead of -Xlog:gc*, there won't be a CPU breakout
+        // line that will publish the event.  (cpuBreakout() above)
+
+        // If we haven't spotted a CPU decorator in the diarizer, we should be able to publish this line
+        // after filling in the missing info.
+        if (forwardReference.getGcType() == null && !diary.isPrintCPUTimes()) {
+            forwardReference.setGcType(GarbageCollectionTypes.Young);
+            forwardReference.setGCCause(trace.gcCause(-2));
+            forwardReference.setStartTime(getClock());
+            try {
+                publishPauseEvent(forwardReference.buildEvent());
+            } catch (MalformedEvent malformedEvent) {
+                LOGGER.warning(malformedEvent.getMessage());
+            }
+        }
     }
 
     /**
